2011-11-03  Tristan Gingold  <gingold@adacore.com>

	* scripttempl/aix.sc: Consider header size for .text and .data
	alignment.

2011-11-02  Tristan Gingold  <gingold@adacore.com>

	* emultempl/aix.em (read_file_list): New function.
	(_handle_option): Handle '-f'.
	* NEWS: Mention this feature.

2011-11-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.tgt (x86_64-*-solaris2*): Use $targ_extra_emuls for
	targ_extra_libpath.

2011-11-01  DJ Delorie  <dj@redhat.com>

	* Makefile.am (ALL_EMULATION_SOURCES): Add eelf32rl78.c.
	(+eelf32rl78.c): New rule.
	* Makefile.in: Regenerate.
	* configure.tgt: Add rl78-*-* case.
	* emulparams/elf32rl78.sh: New file.
	* NEWS: Mention addition of Renesas RL78 support.

2011-10-28  Walter Lee  <walt@tilera.com>

	* NEWS: Fix TILEPro capitalization.

2011-10-25  Joern Rennecke  <joern.rennecke@embecosm.com>

	* NEWS: Mention addition of Adapteva Epiphany support.
	* Makefile.am (ALL_EMULATION_SOURCES): Add eelf32epiphany.c .
	(eelf32epiphany.c): New rule.
	* configure.tgt: Handle epiphany-*-elf.
	* emulparams/elf32epiphany.sh: New file.
	* Makefile.in: Regenerate.
	* po/ld.pot: Regenerate.

2011-10-24  Nick Clifton  <nickc@redhat.com>

	* po/ja.po: Updated Japanese translation.

2011-10-20  Alan Modra  <amodra@gmail.com>

	PR ld/13287
	* plugin.c (plugin_should_reload): New function.
	* plugin.h (plugin_should_reload): Declare.
	* ldlang.c (open_input_bfds): Use above function.

2011-10-19  Alan Modra  <amodra@gmail.com>

	PR ld/13254
	* emultempl/elf32.em (gld${EMULATION_NAME}_handle_option): Add
	-z text, -z notext, -z textoff options for all targets having
	shared lib support.

2011-10-15  Alan Modra  <amodra@gmail.com>

	* emultempl/ppc64elf.em (gld${EMULATION_NAME}_finish): Remove toc check.

2011-10-13  Dave Korn  <dave.korn.cygwin@gmail.com>

	* pe-dll.c (generate_reloc): Don't emit a base reloc for an
	underlying BFD reloc that will be discarded in eh_frame data.

2011-10-10  Nick Clifton  <nickc@redhat.com>
